fix: adjust font sizing throughout and mobile gutter spacing

--- a/app/assets/css/_blog.scss
+++ b/app/assets/css/_blog.scss
@@ -28,6 +28,7 @@
     &__btn {
         display: flex;
         justify-content: center;
+        text-decoration: none;
     }
 }
 
