--- a/app/assets/css/_layout.scss
+++ b/app/assets/css/_layout.scss
@@ -1,6 +1,6 @@
 .container, .blog-container {
     margin: 0 auto;
-    padding: 0 1.75rem;
+    padding: 0 1.85rem;
     max-width: 30rem;
 }
 
